# jppc

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  alerts.py  companies.py  crawling.py  prices.py  stats.py
backend/app/crawlers/: __init__.py  base_crawler.py  chubu_crawler.py  chugoku_crawler.py  compliance_utils.py  crawler_utils.py  kepco_crawler.py  tepco_crawler.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  alert_setting.py  company.py  crawl_log.py  price_plan.py
backend/app/schemas/: __init__.py  alert.py  company.py  crawling.py  price.py  temp_fix.txt
backend/app/services/: __init__.py  crawl_service.py  data_validation.py  email_service.py  price_service.py  scheduler_service.py
backend/app/templates/email/: base.html  crawl_failure.html  price_change.html  weekly_report.html
backend/app/utils/: __init__.py  helpers.py  logger.py
backend/scripts/: init_db.py
backend/tests/: conftest.py
backend/tests/test_api/: test_alerts.py  test_companies.py  test_crawling.py  test_health.py  test_prices.py
backend/tests/test_crawlers/: test_base_crawler.py  test_crawler_utils.py  test_crawlers_integration.py
backend/tests/test_e2e/: test_full_workflow.py
docs/: PLAN.md  PRD.md  api-spec.md  database-schema.md  deployment.md
frontend/: Dockerfile  package-lock.json  (+2 more)
(+42 files in other folders)
