[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "japan-power-price-crawler"
version = "0.1.0"
description = "Japan Power Company Price Crawler - Automated electricity price data collection system"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "JPPC Team" }
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "playwright>=1.41.0",
    "aiosmtplib>=3.0.1",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
    "httpx>=0.26.0",
    "tenacity>=8.2.3",
    "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
